add state directive, about page and controller and about view, page not working

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -19,6 +19,10 @@ navigation history that also transitions its views in and out.
   <!--<ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">-->
     <!--<ion-nav-view name="tab-account"></ion-nav-view>-->
   <!--</ion-tab>-->
-  
+
+  <!-- AboutTab -->
+  <ion-tab title="About" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/tab/about">
+    <ion-nav-view name="tab-about"></ion-nav-view>
+  </ion-tab>
 
 </ion-tabs>
