--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -20,9 +20,17 @@ navigation history that also transitions its views in and out.
     <!--<ion-nav-view name="tab-account"></ion-nav-view>-->
   <!--</ion-tab>-->
 
+
   <!-- AboutTab -->
   <ion-tab title="About" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/tab/about">
     <ion-nav-view name="tab-about"></ion-nav-view>
   </ion-tab>
+
+
+  <!-- BmiTab -->
+  <ion-tab title="BMI Calculator" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/tab/bmi">
+    <ion-nav-view name="tab-bmi"></ion-nav-view>
+  </ion-tab>
+
 
 </ion-tabs>
