add bmi calculator files

--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="row">
       <div class="col">
-        <p>Rodrigo's Demo application porting the BMI calculator to Ionic during Craftacademy bootcamp.</p>
+        <p>Rodrigo's Demo application porting the BMI calculator to Ionic. This is a project made during the Craftacademy bootcamp.</p>
       </div>
     </div>
   </ion-content>
